samples/_failures_safe/1761362754_7287b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba0ac473.c: In function ‘decrease_key’:
./samples/SAFE/__tmp_ba0ac473.c:162:5: error: expected expression at end of input
  162 |     while (i >
      |     ^~~~~
./samples/SAFE/__tmp_ba0ac473.c:162:5: error: expected declaration or statement at end of input
